--- a/modules/libphaseret/src/CMakeLists.txt
+++ b/modules/libphaseret/src/CMakeLists.txt
@@ -1,44 +1,45 @@
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
+
 
 SET(sources
-    dgtrealwrapper.c gla.c legla.c pghi.c rtisila.c rtpghi.c spsi.c utils.c
+    gla.c legla.c pghi.c rtisila.c rtpghi.c spsi.c utils.c
     gsrtisila.c gsrtisilapghi.c)
 
 SET(sources_typeconstant
-    dgtrealwrapper_typeconstant.c legla_typeconstant.c pghi_typeconstant.c)
+    legla_typeconstant.c pghi_typeconstant.c)
 
 if (USECPP)
     SET_SOURCE_FILES_PROPERTIES( ${sources} ${sources_typeconstant} PROPERTIES LANGUAGE CXX)
 endif (USECPP)
 
-add_library(commondouble OBJECT ${sources_typeconstant})
-add_library(commonsingle OBJECT ${sources_typeconstant})
+add_library(libphaseret_commondouble OBJECT ${sources_typeconstant})
+add_library(libphaseret_commonsingle OBJECT ${sources_typeconstant})
 
-add_library(double OBJECT ${sources})
-add_library(single OBJECT ${sources})
+add_library(libphaseret_double OBJECT ${sources})
+add_library(libphaseret_single OBJECT ${sources})
 
-target_compile_definitions(commondouble PUBLIC LTFAT_DOUBLE)
-target_compile_definitions(commonsingle PUBLIC LTFAT_SINGLE)
-target_compile_definitions(double PUBLIC LTFAT_DOUBLE)
-target_compile_definitions(single PUBLIC LTFAT_SINGLE)
+target_compile_definitions(libphaseret_commondouble PUBLIC LTFAT_DOUBLE)
+target_compile_definitions(libphaseret_commonsingle PUBLIC LTFAT_SINGLE)
+target_compile_definitions(libphaseret_double PUBLIC LTFAT_DOUBLE)
+target_compile_definitions(libphaseret_single PUBLIC LTFAT_SINGLE)
 
-if (MSVC)
-    target_compile_definitions(commondouble PUBLIC PHASERET_BUILD_SHARED)
-    target_compile_definitions(commonsingle PUBLIC PHASERET_BUILD_SHARED)
-    target_compile_definitions(double PUBLIC PHASERET_BUILD_SHARED)
-    target_compile_definitions(single PUBLIC PHASERET_BUILD_SHARED)
-endif(MSVC)
+# if (MSVC)
+#     target_compile_definitions(libphaseret_commondouble PUBLIC LTFAT_BUILD_SHARED)
+#     target_compile_definitions(libphaseret_commonsingle PUBLIC LTFAT_BUILD_SHARED)
+#     target_compile_definitions(libphaseret_double PUBLIC LTFAT_BUILD_SHARED)
+#     target_compile_definitions(libphaseret_single PUBLIC LTFAT_BUILD_SHARED)
+# endif(MSVC)
 
 add_library(phaseret_static STATIC
-    $<TARGET_OBJECTS:commondouble> $<TARGET_OBJECTS:double> $<TARGET_OBJECTS:single>)
+    $<TARGET_OBJECTS:libphaseret_commondouble> $<TARGET_OBJECTS:libphaseret_double> $<TARGET_OBJECTS:libphaseret_single>)
 set_target_properties(phaseret_static PROPERTIES OUTPUT_NAME phaseret)
 
 add_library(phaseretd_static STATIC
-    $<TARGET_OBJECTS:commondouble> $<TARGET_OBJECTS:double>)
+    $<TARGET_OBJECTS:libphaseret_commondouble> $<TARGET_OBJECTS:libphaseret_double>)
 set_target_properties(phaseretd_static PROPERTIES OUTPUT_NAME phaseretd)
 
 add_library(phaseretf_static STATIC
-    $<TARGET_OBJECTS:commonsingle> $<TARGET_OBJECTS:single>)
+    $<TARGET_OBJECTS:libphaseret_commonsingle> $<TARGET_OBJECTS:libphaseret_single>)
 set_target_properties(phaseretf_static PROPERTIES OUTPUT_NAME phaseretf)
 
 target_link_libraries(phaseret_static)
@@ -46,14 +47,14 @@ target_link_libraries(phaseretf_static)
 target_link_libraries(phaseretd_static)
 
 add_library(phaseret SHARED
-    $<TARGET_OBJECTS:commondouble> $<TARGET_OBJECTS:double> $<TARGET_OBJECTS:single>)
+    $<TARGET_OBJECTS:libphaseret_commondouble> $<TARGET_OBJECTS:libphaseret_double> $<TARGET_OBJECTS:libphaseret_single>)
 
 
 add_library(phaseretd SHARED
-    $<TARGET_OBJECTS:commondouble> $<TARGET_OBJECTS:double>)
+    $<TARGET_OBJECTS:libphaseret_commondouble> $<TARGET_OBJECTS:libphaseret_double>)
 
 add_library(phaseretf SHARED
-    $<TARGET_OBJECTS:commonsingle> $<TARGET_OBJECTS:single>)
+    $<TARGET_OBJECTS:libphaseret_commonsingle> $<TARGET_OBJECTS:libphaseret_single>)
 
 
 if (MSVC)
@@ -64,9 +65,9 @@ endif(MSVC)
 
 
 
-target_link_libraries(phaseret  ${LTFAT_LIB} ${LIBS})
-target_link_libraries(phaseretf ${LTFATF_LIB} ${LIBS})
-target_link_libraries(phaseretd ${LTFATD_LIB} ${LIBS})
+target_link_libraries(phaseret  ltfat)
+target_link_libraries(phaseretf ltfatf)
+target_link_libraries(phaseretd ltfatd)
 
 
 set(CMAKE_BUILD_TYPE Release)
