Muted VS warnings

--- a/modules/libphaseret/src/CMakeLists.txt
+++ b/modules/libphaseret/src/CMakeLists.txt
@@ -9,7 +9,8 @@ SET(sources_typeconstant
     legla_typeconstant.c pghi_typeconstant.c)
 
 if (USECPP)
-    SET_SOURCE_FILES_PROPERTIES( ${sources} ${sources_typeconstant} PROPERTIES LANGUAGE CXX)
+    SET_SOURCE_FILES_PROPERTIES( ${sources} ${sources_typeconstant} 
+        PROPERTIES LANGUAGE CXX)
 endif (USECPP)
 
 add_library(libphaseret_commondouble OBJECT ${sources_typeconstant})
@@ -23,51 +24,43 @@ target_compile_definitions(libphaseret_commonsingle PUBLIC LTFAT_SINGLE)
 target_compile_definitions(libphaseret_double PUBLIC LTFAT_DOUBLE)
 target_compile_definitions(libphaseret_single PUBLIC LTFAT_SINGLE)
 
-# if (MSVC)
-#     target_compile_definitions(libphaseret_commondouble PUBLIC LTFAT_BUILD_SHARED)
-#     target_compile_definitions(libphaseret_commonsingle PUBLIC LTFAT_BUILD_SHARED)
-#     target_compile_definitions(libphaseret_double PUBLIC LTFAT_BUILD_SHARED)
-#     target_compile_definitions(libphaseret_single PUBLIC LTFAT_BUILD_SHARED)
-# endif(MSVC)
+if (MSVC)
+if(BUILD_SHARED_LIBS)
+    target_compile_definitions(libphaseret_commondouble PUBLIC LTFAT_BUILD_SHARED)
+    target_compile_definitions(libphaseret_commonsingle PUBLIC LTFAT_BUILD_SHARED)
+    target_compile_definitions(libphaseret_double PUBLIC LTFAT_BUILD_SHARED)
+    target_compile_definitions(libphaseret_single PUBLIC LTFAT_BUILD_SHARED)
+else(BUILD_SHARED_LIBS)
+    target_compile_definitions(libphaseret_commondouble PUBLIC LTFAT_BUILD_STATIC)
+    target_compile_definitions(libphaseret_commonsingle PUBLIC LTFAT_BUILD_STATIC)
+    target_compile_definitions(libphaseret_double PUBLIC LTFAT_BUILD_STATIC)
+    target_compile_definitions(libphaseret_single PUBLIC LTFAT_BUILD_STATIC)
+endif(BUILD_SHARED_LIBS)
+endif(MSVC)
 
-add_library(phaseret_static STATIC
-    $<TARGET_OBJECTS:libphaseret_commondouble> $<TARGET_OBJECTS:libphaseret_double> $<TARGET_OBJECTS:libphaseret_single>)
-set_target_properties(phaseret_static PROPERTIES OUTPUT_NAME phaseret)
-
-add_library(phaseretd_static STATIC
-    $<TARGET_OBJECTS:libphaseret_commondouble> $<TARGET_OBJECTS:libphaseret_double>)
-set_target_properties(phaseretd_static PROPERTIES OUTPUT_NAME phaseretd)
-
-add_library(phaseretf_static STATIC
-    $<TARGET_OBJECTS:libphaseret_commonsingle> $<TARGET_OBJECTS:libphaseret_single>)
-set_target_properties(phaseretf_static PROPERTIES OUTPUT_NAME phaseretf)
-
-target_link_libraries(phaseret_static)
-target_link_libraries(phaseretf_static)
-target_link_libraries(phaseretd_static)
-
-add_library(phaseret SHARED
-    $<TARGET_OBJECTS:libphaseret_commondouble> $<TARGET_OBJECTS:libphaseret_double> $<TARGET_OBJECTS:libphaseret_single>)
+add_library(phaseret
+    $<TARGET_OBJECTS:libphaseret_commondouble>
+    $<TARGET_OBJECTS:libphaseret_double>
+    $<TARGET_OBJECTS:libphaseret_single>)
 
 
-add_library(phaseretd SHARED
-    $<TARGET_OBJECTS:libphaseret_commondouble> $<TARGET_OBJECTS:libphaseret_double>)
+add_library(phaseretd
+    $<TARGET_OBJECTS:libphaseret_commondouble>
+    $<TARGET_OBJECTS:libphaseret_double>)
 
-add_library(phaseretf SHARED
-    $<TARGET_OBJECTS:libphaseret_commonsingle> $<TARGET_OBJECTS:libphaseret_single>)
-
+add_library(phaseretf
+    $<TARGET_OBJECTS:libphaseret_commonsingle>
+    $<TARGET_OBJECTS:libphaseret_single>)
 
 if (MSVC)
+if(BUILD_SHARED_LIBS)
     set_target_properties(phaseret PROPERTIES IMPORT_SUFFIX ".dll.lib")
     set_target_properties(phaseretf PROPERTIES IMPORT_SUFFIX ".dll.lib")
     set_target_properties(phaseretd PROPERTIES IMPORT_SUFFIX ".dll.lib")
+endif(BUILD_SHARED_LIBS)
 endif(MSVC)
-
-
 
 target_link_libraries(phaseret  ltfat)
 target_link_libraries(phaseretf ltfatf)
 target_link_libraries(phaseretd ltfatd)
 
-
-set(CMAKE_BUILD_TYPE Release)
